add published state to collections and datasets

--- a/catalogue/cmems-reanalysis/cmems_mod_glo_phy_my_0.083_P1D-m/__item__.yaml
+++ b/catalogue/cmems-reanalysis/cmems_mod_glo_phy_my_0.083_P1D-m/__item__.yaml
@@ -15,6 +15,7 @@ bbox:
 properties:
   start_datetime: '1993-01-01T12:00:00Z'
   end_datetime: '2020-12-31T12:00:00Z'
+  edh:maturity: published
   dc:abstract: Global Ocean Physics Reanalysis
   dc:access_rights: free of charge
   dc:title: Global Ocean Physics Reanalysis
