--- a/catalogue/era5/reanalysis-era5-land/__item__.yaml
+++ b/catalogue/era5/reanalysis-era5-land/__item__.yaml
@@ -15,6 +15,7 @@ bbox:
 properties:
   start_datetime: '1950-01-01T00:00:00Z'
   end_datetime: '2023-10-31T23:00:00Z'
+  edh:maturity: published
   dc:abstract: Europe ERA5-Land hourly data from 1950 to 2023
   dc:access_rights: free of charge
   dc:title: ERA5-Land hourly data
