--- a/catalogue/era5/reanalysis-era5-single-levels/__item__.yaml
+++ b/catalogue/era5/reanalysis-era5-single-levels/__item__.yaml
@@ -15,6 +15,7 @@ bbox:
 properties:
   start_datetime: '1940-01-01T00:00:00Z'
   end_datetime: '2023-12-31T23:00:00Z'
+  edh:maturity: published
   dc:abstract: Subset of ERA5 reanalysis on the surface (single-levels) for atmospheric,
     ocean-wave and land surface quantities
   dc:access_rights: free of charge
