--- a/catalogue/eurostat/geoprocessed-eurostat-cooling-heating-degree-days-nrg_chddr2_a/__item__.yaml
+++ b/catalogue/eurostat/geoprocessed-eurostat-cooling-heating-degree-days-nrg_chddr2_a/__item__.yaml
@@ -15,6 +15,7 @@ bbox:
 properties:
   start_datetime: '1979-01-01T00:00:00Z'
   end_datetime: '2022-01-01T00:00:00Z'
+  edh:maturity: published
   dc:abstract: Europe Eurostat CDD & HDD data from 1979 to 2021
   dc:access_rights: charges apply
   dc:title: Eurostat CDD & HDD data over Europe
