--- a/catalogue/eurostat/geoprocessed-eurostat-soil-erosion-aei_pr_soiler/__item__.yaml
+++ b/catalogue/eurostat/geoprocessed-eurostat-soil-erosion-aei_pr_soiler/__item__.yaml
@@ -16,6 +16,7 @@ bbox:
 properties:
   start_datetime: '2000-01-01T00:00:00Z'
   end_datetime: '2016-01-01T00:00:00Z'
+  edh:maturity: published
   dc:abstract: Europe EUROSTAT Estimated soil erosion by water, by erosion level,
     land cover and NUTS 3 regions
   dc:access_rights: charges apply
