Publish GLO-30 and GLO-90

--- a/catalogue/copernicus-dem/GLO-30/__item__.yaml
+++ b/catalogue/copernicus-dem/GLO-30/__item__.yaml
@@ -18,6 +18,7 @@ properties:
   dc:abstract: Copernicus DEM Global 30m
   dc:access_rights: free of charge
   dc:title: Copernicus DEM Global 30m
+  edh:maturity: published
   dc:subject:
   - Copernicus
   - DEM
