--- a/catalogue/copernicus-dem/GLO-90/__item__.yaml
+++ b/catalogue/copernicus-dem/GLO-90/__item__.yaml
@@ -18,6 +18,7 @@ properties:
   dc:abstract: Copernicus DEM Global 90m
   dc:access_rights: free of charge
   dc:title: Copernicus DEM Global 90m
+  edh:maturity: published
   dc:subject:
   - Copernicus
   - DEM
