--- a/catalogue/destine-climate-dt/__collection__.yaml
+++ b/catalogue/destine-climate-dt/__collection__.yaml
@@ -30,15 +30,21 @@ keywords:
 - forecast
 - weather
 providers:
+- name: European Union
+  roles:
+  - licensor
+  url: https://european-union.europa.eu
 - name: ECMWF
   roles:
   - producer
-  - licensor
-  url: https://www.ecmwf.int/
+  url: https://www.ecmwf.int
 - name: B-Open
   roles:
   - processor
+  url: https://www.bopen.eu
+- name: Destination Earth Service Platform
+  roles:
   - host
-  url: https://www.bopen.eu/
+  url: https://destination-earth.eu
 search_weight: 10
 edh:maturity: published
