--- a/catalogue/destine-climate-dt/SSP3-7.0-IFS-NEMO-single-levels/__item__.yaml
+++ b/catalogue/destine-climate-dt/SSP3-7.0-IFS-NEMO-single-levels/__item__.yaml
@@ -13,8 +13,9 @@ properties:
   dc:abstract: Climate DT SSP3-7.0 IFS-NEMO on single-levels
   dc:access_rights: free of charge
   dc:title: Climate DT SSP3-7.0 IFS-NEMO on single-levels
-  dc:descriptin: Climate DT SSP3-7.0 IFS-NEMO on single-levels
-  dc:subject:
+  dc:description: Climate DT SSP3-7.0 IFS-NEMO on single-levels
+  start_datetime: '2021-01-01T00:00:00Z'
+  end_datetime: '2023-12-31T23:00:00Z'  dc:subject:
   - DestinE
   - ECMWF
   - forecast
@@ -46,8 +47,6 @@ properties:
       description: 2 metre temperature
       unit: K
   dc:extent: 55.0 GiB
-  start_datetime: '2021-01-01T00:00:00Z'
-  end_datetime: '2023-12-31T23:00:00Z'
 assets:
   data:
     href: https://earthdatahub.com/stores/destine-climate-dt/SSP3-7.0-IFS-NEMO-single-levels-v0.zarr
