--- a/catalogue/destine-climate-dt/SSP3-7.0-IFS-NEMO-single-levels/__item__.yaml
+++ b/catalogue/destine-climate-dt/SSP3-7.0-IFS-NEMO-single-levels/__item__.yaml
@@ -15,7 +15,8 @@ properties:
   dc:title: Climate DT SSP3-7.0 IFS-NEMO on single-levels
   dc:description: Climate DT SSP3-7.0 IFS-NEMO on single-levels
   start_datetime: '2021-01-01T00:00:00Z'
-  end_datetime: '2023-12-31T23:00:00Z'  dc:subject:
+  end_datetime: '2023-12-31T23:00:00Z'
+  dc:subject:
   - DestinE
   - ECMWF
   - forecast
