--- a/catalogue/destine-extreme-dt/__collection__.yaml
+++ b/catalogue/destine-extreme-dt/__collection__.yaml
@@ -20,8 +20,8 @@ extent:
       - 90
   temporal:
     interval:
-    - - 
-      - 
+    - - null
+      - null
 license: various
 keywords:
 - DestinE
