--- a/catalogue/destine-climate-dt/SSP3-7.0-IFS-NEMO-single-levels/__item__.yaml
+++ b/catalogue/destine-climate-dt/SSP3-7.0-IFS-NEMO-single-levels/__item__.yaml
@@ -14,7 +14,7 @@ properties:
   dc:access_rights: free of charge
   dc:title: Climate DT SSP3-7.0 IFS-NEMO on single-levels
   dc:description: Climate DT SSP3-7.0 IFS-NEMO on single-levels
-  start_datetime: '2021-01-01T00:00:00Z'
+  start_datetime: '2020-01-01T00:00:00Z'
   end_datetime: '2023-12-31T23:00:00Z'
   dc:subject:
   - DestinE
@@ -42,15 +42,55 @@ properties:
     t2m:
       dimensions:
       - time
-      - lat
-      - lon
+      - latitude
+      - longitude
       type: data
       description: 2 metre temperature
       unit: K
-  dc:extent: 55.0 GiB
+    d2m:
+      dimensions:
+      - time
+      - latitude
+      - longitude
+      type: data
+      description: 2 metre dewpoint temperature
+      unit: K
+    sp:
+      dimensions:
+      - time
+      - latitude
+      - longitude
+      type: data
+      description: Surface pressure
+      unit: Pa
+    tprate:
+      dimensions:
+      - time
+      - latitude
+      - longitude
+      type: data
+      description: Total precipitation rate
+      unit: kg m**-2 s**-1
+    u10:
+      dimensions:
+      - time
+      - latitude
+      - longitude
+      type: data
+      description: 10 metre U wind component
+      unit: m s**-1
+    v10:
+      dimensions:
+      - time
+      - latitude
+      - longitude
+      type: data
+      description: 10 metre V wind component
+      unit: m s**-1
+  dc:extent: 442.0 GiB
 assets:
   data:
-    href: https://earthdatahub.com/stores/destine-climate-dt/SSP3-7.0-IFS-NEMO-single-levels-v0.zarr
+    href: https://earthdatahub.com/stores/destine-climate-dt/SSP3-7.0-IFS-NEMO-sfc-standard-v0.zarr
     roles:
     - data
     xarray:open_kwargs:
