--- a/catalogue/eurostat/__collection__.yaml
+++ b/catalogue/eurostat/__collection__.yaml
@@ -24,8 +24,8 @@ extent:
       - 74
   temporal:
     interval:
-    - -
-      -
+    - - null
+      - null
 license: various
 keywords:
 - eurostat
