--- a/catalogue/destine-climate-dt/SSP3-7.0-IFS-NEMO-single-levels/__item__.yaml
+++ b/catalogue/destine-climate-dt/SSP3-7.0-IFS-NEMO-single-levels/__item__.yaml
@@ -114,7 +114,7 @@ properties:
   dc:extent: 662.0 GiB
 assets:
   data:
-    href: https://earthdatahub.com/stores/destine-climate-dt/SSP3-7.0-IFS-NEMO-sfc-standard-v0.zarr
+    href: https://destine-climate.earthdatahub.com/SSP3-7.0-IFS-NEMO-sfc-standard-v0.zarr
     roles:
     - data
     xarray:open_kwargs:
