--- a/catalogue/destine-climate-dt/SSP3-7.0-IFS-NEMO-0001-high-pl/__item__.yaml
+++ b/catalogue/destine-climate-dt/SSP3-7.0-IFS-NEMO-0001-high-pl/__item__.yaml
@@ -10,12 +10,12 @@ bbox:
 - 90.0
 properties:
   edh:maturity: draft
-  dc:abstract: High resolution Climate DT on single levels - SSP3-7.0 - IFS-NEMO
+  dc:abstract: High resolution Climate DT on pressure levels - SSP3-7.0 - IFS-NEMO
   dc:access_rights: free of charge
-  dc:title: High resolution Climate DT on single levels - SSP3-7.0 - IFS-NEMO
-  dc:description: High resolution Climate DT on single levels - SSP3-7.0 - IFS-NEMO
+  dc:title: High resolution Climate DT on pressure levels - SSP3-7.0 - IFS-NEMO
+  dc:description: High resolution Climate DT on pressure levels - SSP3-7.0 - IFS-NEMO
   start_datetime: '2020-01-01T00:00:00Z'
-  end_datetime: '2024-12-31T23:00:00Z'
+  end_datetime: '2021-12-31T23:00:00Z'
   dc:subject:
   - DestinE
   - ECMWF
@@ -39,26 +39,19 @@ properties:
       reference_system: 4326
       step: 0.044
   cube:variables:
-    t2m:
+    t:
       dimensions:
       - time
+      - isobaricInhPa
       - latitude
       - longitude
       type: data
-      description: 2 metre temperature
+      description: Temperature
       unit: K
-    tprate:
-      dimensions:
-      - time
-      - latitude
-      - longitude
-      type: data
-      description: Total precipitation rate
-      unit: kg m**-2 s**-1
-  dc:extent: 11,772.0 GiB
+  dc:extent: 11,775.0 GiB
 assets:
   data:
-    href: https://data.earthdatahub.com/destine-climate-dt/SSP3-7.0-IFS-NEMO-0001-high-sfc-v0.zarr
+    href: https://data.earthdatahub.com/destine-climate-dt/SSP3-7.0-IFS-NEMO-0001-high-pl-v0.zarr
     roles:
     - data
     xarray:open_kwargs:
@@ -67,4 +60,4 @@ assets:
     xarray:storage_options:
       client_kwargs:
         trust_env: true
-search_weight: 70
+search_weight: 90
