--- a/catalogue/destine-climate-dt/SSP3-7.0-IFS-NEMO-0001-standard-pl/ingestion/ingestion-steps.yaml
+++ b/catalogue/destine-climate-dt/SSP3-7.0-IFS-NEMO-0001-standard-pl/ingestion/ingestion-steps.yaml
@@ -8,7 +8,7 @@ steps:
       activity: ScenarioMIP
       class: d1
       dataset: climate-dt
-      date: [ 2020-01-01/to/2024-12-31 ]
+      date: [ 2020-01-01/to/2020-03-04 ]
       experiment: SSP3-7.0
       expver: '0001'
       generation: 1
@@ -27,12 +27,12 @@ steps:
     client_kwargs:
         address: polytope.apps.lumi.ewctest.link
         quiet: false
-  chunks: {latitude: 256, longitude: 256, time: 576, isobaricInhPa: 1}
+  chunks: {latitude: 128, longitude: 128, time: 576, isobaricInhPa: 1}
   open_dataset_name: open_healpix_dataset
   robust_to_zarr_kwargs:
     time_dim: time
-    time_restart_block: 20
+    time_restart_block: 1
     retries: 1
   to_zarr_kwargs:
-    store: s3://edh-climate-dt/SSP3-7.0-pl-standard-v0.zarr
+    store: s3://edh-climate-dt/SSP3-7.0-IFS-NEMO-0001-standard-pl-v0.zarr
     write_empty_chunks: false
