Publish high res sfc and standard pl

--- a/catalogue/destine-climate-dt/SSP3-7.0-IFS-NEMO-0001-standard-pl/__item__.yaml
+++ b/catalogue/destine-climate-dt/SSP3-7.0-IFS-NEMO-0001-standard-pl/__item__.yaml
@@ -9,7 +9,7 @@ bbox:
 - 180.0
 - 90.0
 properties:
-  edh:maturity: draft
+  edh:maturity: published
   dc:abstract: Climate DT SSP3-7.0 standard resolutions on pressure levels
   dc:access_rights: free of charge
   dc:title: Climate DT SSP3-7.0 standard resolutions on pressure levels
