--- a/catalogue/destine-climate-dt/SSP3-7.0-IFS-NEMO-0001-high-sfc/__item__.yaml
+++ b/catalogue/destine-climate-dt/SSP3-7.0-IFS-NEMO-0001-high-sfc/__item__.yaml
@@ -9,7 +9,7 @@ bbox:
 - 180.0
 - 90.0
 properties:
-  edh:maturity: draft
+  edh:maturity: published
   dc:abstract: High resolution Climate DT on single levels - SSP3-7.0 - IFS-NEMO
   dc:access_rights: free of charge
   dc:title: High resolution Climate DT on single levels - SSP3-7.0 - IFS-NEMO
