--- a/catalogue/destine-climate-dt/SSP3-7.0-IFS-NEMO-0001-standard-pl/__item__.yaml
+++ b/catalogue/destine-climate-dt/SSP3-7.0-IFS-NEMO-0001-standard-pl/__item__.yaml
@@ -10,10 +10,10 @@ bbox:
 - 90.0
 properties:
   edh:maturity: published
-  dc:abstract: Climate DT SSP3-7.0 standard resolutions on pressure levels
+  dc:abstract: Standard resolution Climate DT on pressure levels - SSP3-7.0 - IFS-NEMO
   dc:access_rights: free of charge
-  dc:title: Climate DT SSP3-7.0 standard resolutions on pressure levels
-  dc:description: Climate DT SSP3-7.0 standard resolutions on pressure levels
+  dc:title: Standard resolution Climate DT on pressure levels - SSP3-7.0 - IFS-NEMO
+  dc:description: Standard resolution Climate DT on pressure levels - SSP3-7.0 - IFS-NEMO
   start_datetime: '2020-01-01T00:00:00Z'
   end_datetime: '2020-03-04T23:00:00Z'
   dc:subject:
