Un-publish short dataset

--- a/catalogue/destine-climate-dt/SSP3-7.0-IFS-NEMO-0001-standard-pl/__item__.yaml
+++ b/catalogue/destine-climate-dt/SSP3-7.0-IFS-NEMO-0001-standard-pl/__item__.yaml
@@ -9,7 +9,7 @@ bbox:
 - 180.0
 - 90.0
 properties:
-  edh:maturity: published
+  edh:maturity: draft
   dc:abstract: Standard resolution Climate DT on pressure levels - SSP3-7.0 - IFS-NEMO
   dc:access_rights: free of charge
   dc:title: Standard resolution Climate DT on pressure levels - SSP3-7.0 - IFS-NEMO
