--- a/catalogue/era5/ecv-for-climate-change/__item__.yaml
+++ b/catalogue/era5/ecv-for-climate-change/__item__.yaml
@@ -16,7 +16,7 @@ bbox:
 properties:
   start_datetime: '1978-12-31T18:00:00Z'
   end_datetime: '2023-08-31T18:00:00Z'
-  edh:maturity: published
+  edh:maturity: draft
   dc:abstract: The Essential Climate Variables from 1979 to present dataset contains
     a selection of climatologies, monthly anomalies and monthly mean fields for monitoring
     and assessment of climate variability and change
