--- a/catalogue/destine-climate-dt/SSP3-7.0-IFS-NEMO-0001-high-sfc/__item__.yaml
+++ b/catalogue/destine-climate-dt/SSP3-7.0-IFS-NEMO-0001-high-sfc/__item__.yaml
@@ -15,7 +15,7 @@ properties:
   dc:title: High resolution Climate DT on single levels - SSP3-7.0 - IFS-NEMO
   dc:description: High resolution Climate DT on single levels - SSP3-7.0 - IFS-NEMO
   start_datetime: '2020-01-01T00:00:00Z'
-  end_datetime: '2024-12-31T23:00:00Z'
+  end_datetime: '2029-12-31T23:00:00Z'
   dc:subject:
   - DestinE
   - ECMWF
@@ -71,7 +71,15 @@ properties:
       type: data
       description: 10 metre V wind component
       unit: m s**-1
-  dc:extent: 23,544.0 GiB
+    d2m:
+      dimensions:
+      - time
+      - latitude
+      - longitude
+      type: data
+      description: 2 metre dewpoint temperature
+      unit: K
+  dc:extent: 58,843.0 GiB
 assets:
   data:
     href: https://data.earthdatahub.com/destine-climate-dt/SSP3-7.0-IFS-NEMO-0001-high-sfc-v0.zarr
