--- a/catalogue/copernicus-dem/templates/GLO-30-UTM/GLO-30-UTM-{{cookiecutter.utm_zone}}/__item__.yaml
+++ b/catalogue/copernicus-dem/templates/GLO-30-UTM/GLO-30-UTM-{{cookiecutter.utm_zone}}/__item__.yaml
@@ -53,7 +53,7 @@ properties:
   dc:extent: 1,280.0 GiB
 assets:
   data:
-    href: https://earthdatahub.com/stores/copernicus-dem/GLO-30-UTM-{{ cookiecutter.utm_zone }}-v0.zarr
+    href: https://data.earthdatahub.com/copernicus-dem/GLO-30-UTM-{{ cookiecutter.utm_zone }}-v0.zarr
     roles:
     - data
     xarray:open_kwargs:
