--- a/catalogue/destine-climate-dt/SSP3-7.0-IFS-NEMO-0001-high-pl/__item__.yaml
+++ b/catalogue/destine-climate-dt/SSP3-7.0-IFS-NEMO-0001-high-pl/__item__.yaml
@@ -48,7 +48,7 @@ properties:
       type: data
       description: Temperature
       unit: K
-  dc:extent: 11,775.0 GiB
+  dc:extent: 11.8 TB
 assets:
   data:
     href: https://data.earthdatahub.com/destine-climate-dt/SSP3-7.0-IFS-NEMO-0001-high-pl-v0.zarr
