--- a/catalogue/destine-climate-dt/SSP3-7.0-IFS-NEMO-0001-standard-sfc/__item__.yaml
+++ b/catalogue/destine-climate-dt/SSP3-7.0-IFS-NEMO-0001-standard-sfc/__item__.yaml
@@ -183,7 +183,7 @@ properties:
       type: data
       description: 10 metre V wind component
       unit: m s**-1
-  dc:extent: 3,209.0 GiB
+  dc:extent: 3.2 TB
 assets:
   data:
     href: https://data.earthdatahub.com/destine-climate-dt/SSP3-7.0-IFS-NEMO-0001-standard-sfc-v0.zarr
