--- a/catalogue/destine-climate-dt/SSP3-7.0-IFS-NEMO-0001-high-sfc/__item__.yaml
+++ b/catalogue/destine-climate-dt/SSP3-7.0-IFS-NEMO-0001-high-sfc/__item__.yaml
@@ -79,7 +79,23 @@ properties:
       type: data
       description: 2 metre dewpoint temperature
       unit: K
-  dc:extent: 58.8 TB
+    ssr:
+      dimensions:
+      - time
+      - latitude
+      - longitude
+      type: data
+      description: Surface net short-wave (solar) radiation
+      unit: J m**-2
+    str:
+      dimensions:
+      - time
+      - latitude
+      - longitude
+      type: data
+      description: Surface net long-wave (thermal) radiation
+      unit: J m**-2
+  dc:extent: 82.4 TB
 assets:
   data:
     href: https://data.earthdatahub.com/destine-climate-dt/SSP3-7.0-IFS-NEMO-0001-high-sfc-v0.zarr
