--- a/catalogue/destine-climate-dt/SSP3-7.0-IFS-NEMO-0001-high-sfc-daily/__item__.yaml
+++ b/catalogue/destine-climate-dt/SSP3-7.0-IFS-NEMO-0001-high-sfc-daily/__item__.yaml
@@ -10,10 +10,10 @@ bbox:
 - 90.0
 properties:
   edh:maturity: published
-  dc:abstract: High resolution Climate DT on single levels - SSP3-7.0 - IFS-NEMO
+  dc:abstract: High resolution Climate DT daily on single levels - SSP3-7.0 - IFS-NEMO
   dc:access_rights: free of charge
-  dc:title: High resolution Climate DT on single levels - SSP3-7.0 - IFS-NEMO
-  dc:description: High resolution Climate DT on single levels - SSP3-7.0 - IFS-NEMO
+  dc:title: High resolution Climate DT daily on single levels - SSP3-7.0 - IFS-NEMO
+  dc:description: High resolution Climate DT daily on single levels - SSP3-7.0 - IFS-NEMO
   start_datetime: '2020-01-01T00:00:00Z'
   end_datetime: '2029-09-08T00:00:00Z'
   dc:subject:
