--- a/catalogue/cmems-reanalysis/cmems_mod_glo_phy_my_0.083_P1D-m/__item__.yaml
+++ b/catalogue/cmems-reanalysis/cmems_mod_glo_phy_my_0.083_P1D-m/__item__.yaml
@@ -101,7 +101,7 @@ properties:
   dc:extent: 2,525.0 GiB
 assets:
   data:
-    href: https://earthdatahub.com/stores/cmems-reanalysis/cmems_mod_glo_phy_my_0.083_P1D-m.zarr
+    href: https://data.earthdatahub.com/cmems-reanalysis/cmems_mod_glo_phy_my_0.083_P1D-m.zarr
     roles:
     - data
     xarray:open_kwargs:
