--- a/catalogue/egg4/cams-global-ghg-reanalysis-egg4/__item__.yaml
+++ b/catalogue/egg4/cams-global-ghg-reanalysis-egg4/__item__.yaml
@@ -73,7 +73,7 @@ properties:
   dc:extent: 73.0 GiB
 assets:
   data:
-    href: https://earthdatahub.com/stores/egg4/cams-global-ghg-reanalysis-egg4.zarr
+    href: https://data.earthdatahub.com/egg4/cams-global-ghg-reanalysis-egg4.zarr
     roles:
     - data
     xarray:open_kwargs:
