--- a/catalogue/destine-extreme-dt/__collection__.yaml
+++ b/catalogue/destine-extreme-dt/__collection__.yaml
@@ -1,7 +1,7 @@
 title: Destination Earth digital twin on extreme events
 dc:abstract:
   Destination Earth digital twin on extreme events
-edh:maturity: published
+edh:maturity: draft
 links:
 - title: Destination Earth
   rel: derived_from
