--- a/catalogue/egg4/__collection__.yaml
+++ b/catalogue/egg4/__collection__.yaml
@@ -3,6 +3,7 @@ dc:abstract:
   The CAMS reanalysis is the latest global reanalysis data set of atmospheric composition (AC) 
   produced by the Copernicus Atmosphere Monitoring Service, consisting of 3-dimensional time-consistent 
   AC fields, including aerosols, chemical species and greenhouse gases
+edh:maturity: draft
 links:
 - title: CAMS reanalysis
   rel: derived_from
@@ -47,4 +48,3 @@ assets:
     roles:
     - thumbnail
 search_weight: 20
-edh:maturity: published
