--- a/catalogue/copernicus-dem/__collection__.yaml
+++ b/catalogue/copernicus-dem/__collection__.yaml
@@ -3,6 +3,7 @@ dc:abstract:
   The Copernicus DEM is a Digital Surface Model (DSM) that represents
   the surface of the Earth including buildings, infrastructure and vegetation.
   We propose a subset of the whole corpus of data based on the most popular datasets.
+edh:maturity: draft
 links:
 - title: Copernicus DEM documentation
   rel: derived_from
@@ -39,4 +40,3 @@ providers:
   - host
   url: https://www.bopen.eu/
 search_weight: 50
-edh:maturity: published
