--- a/catalogue/destine-climate-dt/SSP3-7.0-IFS-NEMO-0001-high-pl/ingestion/ingestion-steps.yaml
+++ b/catalogue/destine-climate-dt/SSP3-7.0-IFS-NEMO-0001-high-pl/ingestion/ingestion-steps.yaml
@@ -1,14 +1,14 @@
 steps:
 - xarray_open_kwargs:
     cache_kwargs: { cache_file: false }
-    chunks: {}
+    chunks: { time: 96 }
     engine: ecmwf
     client: polytope
     filename_or_obj:
       activity: ScenarioMIP
       class: d1
       dataset: climate-dt
-      date: [ 2020-01-01/to/2021-12-31 ]
+      date: [ 2020-01-01/to/2021-01-27 ]
       experiment: SSP3-7.0
       expver: '0001'
       generation: 1
@@ -32,6 +32,7 @@ steps:
   robust_to_zarr_kwargs:
     time_dim: time
     time_restart_block: 1
+    retries: 1
   to_zarr_kwargs:
     store: s3://edh-climate-dt/SSP3-7.0-IFS-NEMO-0001-high-pl-v0.zarr
     write_empty_chunks: false
