--- a/catalogue/copernicus-dem/GLO-90/__item__.yaml
+++ b/catalogue/copernicus-dem/GLO-90/__item__.yaml
@@ -41,7 +41,7 @@ properties:
       type: data
       description: altitude over the geoid
       unit: m
-  dc:extent: 0.4 TB
+  dc:extent: 373 GB
 assets:
   data:
     href: https://data.earthdatahub.com/copernicus-dem/GLO-90-v0.zarr
