--- a/catalogue/era5/ecv-for-climate-change/__item__.yaml
+++ b/catalogue/era5/ecv-for-climate-change/__item__.yaml
@@ -71,10 +71,10 @@ properties:
       type: data
       description: Total precipitation
       unit: m
-  dc:extent: 7.0 GiB
+  dc:extent: 7 GB
 assets:
   data:
-    href: https://data.earthdatahub.com/era5/ecv-for-climate-change-1981-2010-anomaly-v0.zarr
+    href: https://data.earthdatahub.com/era5-edh/ecv-for-climate-change-1981-2010-anomaly-v0.zarr
     roles:
     - data
     xarray:open_kwargs:
