Bugfix: cannot use different chunks

--- a/catalogue/destine-climate-dt/SSP3-7.0-IFS-NEMO-0001-high-pl/ingestion/ingestion-steps.yaml
+++ b/catalogue/destine-climate-dt/SSP3-7.0-IFS-NEMO-0001-high-pl/ingestion/ingestion-steps.yaml
@@ -1,7 +1,7 @@
 steps:
 - xarray_open_kwargs:
     cache_kwargs: { cache_file: false }
-    chunks: { time: 96 }
+    chunks: {}
     engine: ecmwf
     client: polytope
     filename_or_obj:
