Update the polytope URL

--- a/catalogue/destine-climate-dt/SSP3-7.0-IFS-NEMO-0001-standard-sfc/ingestion/ingestion-steps.yaml
+++ b/catalogue/destine-climate-dt/SSP3-7.0-IFS-NEMO-0001-standard-sfc/ingestion/ingestion-steps.yaml
@@ -24,7 +24,7 @@ steps:
     request_chunker_kwargs:
       time_sep: /to/
     client_kwargs:
-        address: polytope.apps.lumi.ewctest.link
+        address: polytope.lumi.apps.dte.destination-earth.eu
         quiet: true
   chunks: {latitude: 128, longitude: 128, time: 576}
   open_dataset_name: open_healpix_dataset
