--- a/catalogue/destine-climate-dt/SSP3-7.0-IFS-NEMO-0001-high-pl/__item__.yaml
+++ b/catalogue/destine-climate-dt/SSP3-7.0-IFS-NEMO-0001-high-pl/__item__.yaml
@@ -57,7 +57,16 @@ properties:
       type: data
       description: Relative humidity
       unit: '%'
-  dc:extent: 58.9 TB
+    z:
+      dimensions:
+      - time
+      - isobaricInhPa
+      - latitude
+      - longitude
+      type: data
+      description: Geopotential
+      unit: m**2 s**-2
+  dc:extent: 88.3 TB
 assets:
   data:
     href: https://data.earthdatahub.com/destine-climate-dt/SSP3-7.0-IFS-NEMO-0001-high-pl-v0.zarr
