--- a/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-ICON/__collection__.yaml
+++ b/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-ICON/__collection__.yaml
@@ -1,7 +1,7 @@
 title: Destination Earth digital twin for climate change adaptation
 dc:abstract:
   The DestinE Digital Twin for Climate Change Adaptation (Climate DT) supports adaptation activities through the provision of innovative climate information on multi-decadal timescales, at scales at which the impacts of climate change are observed. This initiative presents the first ever attempt to operationalise the production of global multi-decadal climate projections at km-scale resolutions of 5 to 10km.
-edh:maturity: published
+edh:maturity: draft
 links:
 - title: DestinE Climate Adaptation DT, ScenarioMIP, SSP3-7.0, ICON
   rel: derived_from
