Update URL to host

--- a/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/__collection__.yaml
+++ b/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/__collection__.yaml
@@ -45,5 +45,5 @@ providers:
 - name: DestinE Platform
   roles:
   - host
-  url: https://destination-earth.eu
+  url: https://platform.destine.eu
 search_weight: 90
