--- a/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-ICON/__collection__.yaml
+++ b/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-ICON/__collection__.yaml
@@ -20,7 +20,7 @@ extent:
       - 90
   temporal:
     interval:
-    - - 2020-01-01
+    - - 2021-01-01
       - 2030-01-01
 license: various
 keywords:
@@ -45,5 +45,5 @@ providers:
 - name: DestinE Platform
   roles:
   - host
-  url: https://destination-earth.eu
+  url: https://platform.destine.eu
 search_weight: 90
