--- a/catalogue/d1-climate-dt-story-nudging-Tplus2.0K-IFS-FESOM/__collection__.yaml
+++ b/catalogue/d1-climate-dt-story-nudging-Tplus2.0K-IFS-FESOM/__collection__.yaml
@@ -20,8 +20,8 @@ extent:
       - 90
   temporal:
     interval:
-    - - 2020-01-01
-      - 2030-01-01
+    - - 2017-01-01
+      - 2020-01-01
 license: various
 keywords:
 - DestinE
@@ -45,5 +45,5 @@ providers:
 - name: DestinE Platform
   roles:
   - host
-  url: https://destination-earth.eu
+  url: https://platform.destine.eu
 search_weight: 90
