--- a/catalogue/era5/__collection__.yaml
+++ b/catalogue/era5/__collection__.yaml
@@ -46,5 +46,5 @@ providers:
 - name: DestinE Platform
   roles:
   - host
-  url: https://destination-earth.eu
+  url: https://platform.destine.eu
 search_weight: 80
