--- a/catalogue/era5/reanalysis-era5-single-levels/plots.yaml
+++ b/catalogue/era5/reanalysis-era5-single-levels/plots.yaml
@@ -2,7 +2,7 @@ plots:
 - var: "d2m"
   selection: {'valid_time':1}
   plot_kwargs: {
-    'vmax':320,
-    'vmin':233,
-    'cmap':"coolwarm"
+    'vmax':300,
+    'vmin':200,
+    'cmap':"BrBG"
   }
