Update IFS-NEMO sfc image

--- a/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-sfc/plots.yaml
+++ b/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-sfc/plots.yaml
@@ -1,8 +1,10 @@
 plots:
 - var: "d2m"
-  selection: {'time':1}
+  selection: {"time": 736}
+  coarsen: {latitude: 16, longitude: 16}
   plot_kwargs: {
     'vmax':300,
     'vmin':200,
     'cmap':"BrBG"
   }
+  
